third_party/move/move-compiler-v2/tests/lambda/inline-parity/lambda_return_typed.exp

Diagnostics:
error: Return not currently supported in inline functions
  ┌─ tests/lambda/inline-parity/lambda_return_typed.move:3:2
  │
3 │     return f(b)
  │     ^^^^^^^^^^^
